# spot-graphnav-map-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  compatibility.md  import-poc.md  orbit-editor-extension-research.md  orbit-map-assistant-knowledge-base.md  orbit-native-recording-move.md  orbit-walk-import-findings.md  privacy.md
docs/workflows/: offline-map-clone.md  orbit-native-map-split.md  orbit-native-operation-journal-template.md
examples/: zone.example.json
extension/: README.md
extension/orbit-graph-repair/: README.md  baseline.js  content.js  manifest.json  page-bridge.js  panel.css
scripts/: check_release_hygiene.py
src/spot_graphnav_map_forge/: README.md  __init__.py  actions.py  archive.py  audit.py  backup.py  builder.py  cli.py  clone.py  geometry.py  models.py  planner.py  reconnect.py  remap.py  topology.py  validator.py  walk_archive.py  web.py  wire.py
src/spot_graphnav_map_forge/web_assets/: __init__.py  app.js  index.html  styles.css
tests/: test_actions.py  test_audit.py  test_backup.py  test_clone.py  test_extension.py  test_geometry.py  test_planner_web.py  test_reconnect.py  test_release_hygiene.py  test_topology.py  test_walk_archive.py  test_wire.py  test_workflow_docs.py
