[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-graphnav-map-forge"
version = "0.1.0a1"
description = "Orbit-assisted recording splits and experimental offline cloning for Spot GraphNav maps"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["boston-dynamics", "graphnav", "orbit", "robotics", "spot", "autowalk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "bosdyn-api==5.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
]

[project.scripts]
spot-map-forge = "spot_graphnav_map_forge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spot_graphnav_map_forge = [
    "web_assets/*.html",
    "web_assets/*.css",
    "web_assets/*.js",
    "web_assets/*.svg",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "output", "workspace"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
